--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,3 +1,5 @@
+<h1>Create Food</h1>
+
 <%# <form action="/foods" method="POST" > %>
 <%# the path for action MUST MATCH THE ROUTE FOR POST %>
 <form action="<%= foods_path %>" method="POST">
